@@ -76,7 +76,7 @@ void solveTestProblem8()
 void solveTestProblem9()
 {
   TestProblem9 testProblem;
-  testProblem.solve(u);
+  testProblem.solve();
 }
 
 int main(int argc, char* argv[])
